# insightvault

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .python-version  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  run.py  search.html  searchindex.js
.github/workflows/: deploy-docs.yml  publish.yml  quality-checks-main.yml  quality-checks.yml  quality_checks.yml  release-and-publish-docs.yml  release.yml
contents/: api_reference.html  building_apps.html  cli.html  configuration.html  develop.html  installation.html
contents/api/: insightvault.app.html  insightvault.html  insightvault.models.html  insightvault.services.html  modules.html
docs/source/: conf.py  index.rst  modules.rst
docs/source/contents/: building_apps.rst  cli.rst  configuration.rst  develop.rst  getting_started.rst
docs/source/contents/api/: api_reference.rst  insightvault.rst
insightvault/: __init__.py  cli.py  constants.py
insightvault/app/: api.py  base.py  cli.py  rag.py  search.py  summarizer.py
insightvault/models/: document.py
insightvault/services/: __init__.py  database.py  embedding.py  llm.py  prompt.py  splitter.py
tests/unit/: __init__.py
tests/unit/app/: test_base.py  test_cli.py  test_rag.py  test_search.py  test_summarizer.py
tests/unit/services/: __init__.py  test_database.py  test_embedding.py  test_llm.py  test_splitter.py
