[project]
name = "insightvault"
dynamic = ["version"]
description = "Local RAG pipeline runner"
authors = [{ name = "David Kirchhoff" }]
dependencies = [
    "chromadb>=0.4.22",
    "llama-cpp-python>=0.2.39",
    "sentence-transformers>=2.5.1",
    "click>=8.1.7",
    "pydantic>=2.6.1",
    "fastapi>=0.109.2",
    "uvicorn>=0.27.1",
    "python-multipart>=0.0.9",
]
requires-python = ">=3.9"
readme = "README.md"
license = {file = "LICENSE"}

[project.optional-dependencies]
dev = [
    "ruff>=0.2.1",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[project.scripts]
insightvault = "run:main"

[tool.hatch.version]
path = "src/insightvault/__init__.py"